# evergreenlabs-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/skills/site-bot/: SKILL.md
bot/: .dev.vars.example  AGENTS.md  README.md  package-lock.json  package.json  wrangler.toml
bot/migrations/: 0001_init.sql  0002_pending_events.sql  0003_board_events.sql  AGENTS.md
bot/scripts/: AGENTS.md  eval-voices.ts  regen-voices.ts  spike-board-setup.ts
bot/src/: AGENTS.md  index.ts
bot/src/lib/: AGENTS.md  commits.test.ts  commits.ts  filter.test.ts  filter.ts  github.ts  llm.test.ts  llm.ts  publish.test.ts  publish.ts  site-conventions.test.ts  site-conventions.ts  state.ts  verify.test.ts  voices.ts
bot/src/mcp/: AGENTS.md  board.ts  handler.ts  tools.ts
bot/src/pipelines/: AGENTS.md  introduce.ts  issue_sync.test.ts  (+6 more)
data/: AGENTS.md
data/cache/: roadmap-commentary.json
data/site/: AGENTS.md  contributions.json  log.json  now.json  profile.json  projects.json  roadmap.json
docs/adr/: 0001-cloud-migration.md  0002-mcp-server.md  0003-cross-repo-issue-board.md  AGENTS.md
scripts/: AGENTS.md  autorun.sh  poll.sh  register-task.ps1
src/evergreenlabs_bot/: autorun.py  bootstrap.py  cli.py  config.py  drafts.py  github_client.py  github_projects.py  llm_client.py  lock.py  poll.py  publish.py  review.py  state.py
tools/: AGENTS.md  dump-sitedata.mjs
worker/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  wrangler.toml
worker/src/: filter.ts  index.ts  store.ts  verify.ts
(+8 files in other folders)
